WPL-1> Add multiple links to the footer and make the footer responsive
WPL-1> Add multiple links to the footer and make the footer responsive

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
     color: #fff;
     font-size: 3rem;
     /*border-radius: 4px;*/
-    border: 1px solid #bbb;
+    /*border: 1px solid #bbb;*/
     transition: all 0.3s linear;
 
 }
@@ -71,7 +71,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(to right bottom, rgba(222, 40, 209, 0.65) 0%, rgba(107,4,4,0.9) 100%) , url("img/headerimage.jpg");
+    background-image: url("img/undraw.png");
     background-position: center;
     background-size: cover;
 }
@@ -96,11 +96,32 @@
 }
 
 /*FOOTER*/
-footer{
-    height: 50vh;
-    display: flex;
-    align-items: center;
+.footer__wrapper{
+    font-size: 3rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(400px, 1fr));
     justify-content: center;
+    align-items: center;
+    gap: 5rem;
+}
+.footer__wrapper .footer__category{
+    list-style: none;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: start;
+}
+.footer__category .footer__category__item .footer__category__item__link{
+    text-decoration: none;
+    color: white;
+    display: block;
+}
+.footer__category__heading{
+    font-size: 4rem;
+}
+.footer__category__item__link:hover,
+.footer__category__item__link:active {
+    border-bottom: 2px solid white;
+    transition: all 0.5s ease-in-out;
 }
 /*https://paulund.co.uk/how-to-create-shiny-css-buttons*/
 /***********************************************************************
@@ -114,6 +135,19 @@ footer{
     background: -o-linear-gradient(top, #56b870 0%, #a5c956 100%); /* opera 11.10+ */
     background: -ms-linear-gradient(top, #56b870 0%, #a5c956 100%); /* ie10+ */
     background: linear-gradient(top, #56b870 0%, #a5c956 100%); /* w3c */
+}
+
+/***********************************************************************
+ *  black background
+ **********************************************************************/
+.black{
+    background: #404040; /* old browsers */
+    background: -moz-linear-gradient(top, #5d5d5d 0%, #131313 100%); /* ff3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #5d5d5d), color-stop(100%, #131313)); /* chrome,safari4+ */
+    background: -webkit-linear-gradient(top, #5d5d5d 0%, #131313 100%); /* chrome10+,safari5.1+ */
+    background: -o-linear-gradient(top, #5d5d5d 0%, #131313 100%); /* opera 11.10+ */
+    background: -ms-linear-gradient(top, #5d5d5d 0%, #131313 100%); /* ie10+ */
+    background: linear-gradient(top, #5d5d5d 0%, #131313 100%); /* w3c */
 }
 
 /***********************************************************************
@@ -161,6 +195,12 @@ footer{
         font-size: 1.7rem;
         padding-left: 0.5rem;
         padding-right: 0.5rem;
+    }
+    .footer__wrapper .footer__category{
+        width: 60vw;
+        text-align: center;
+        margin: 5rem 0;
+        justify-self: center;
     }
 
 }
