--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@
 }
 
 /*navigation*/
+.sticky{
+    position: fixed;
+    top: 0;
+    width: 100%;
+
+}
 .main-nav {
     list-style: none;
     font-size: 2.2rem;
@@ -71,11 +77,12 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url("img/undraw.png");
-    background-position: center;
-    background-size: cover;
 }
+.header-container .header-image{
+    width: 75rem;
+    height: auto;
 
+}
 /*PROJECTS SECTION*/
 .section-project{
     padding: 10rem 5rem;
